Fix update datetime inspections and enterprises on rejections
