# src/modules/rejections/dto/rejection-response.dto.ts
@@ -9,4 +9,7 @@ export class RejectionResponseDto {
   @ApiProperty() created_at: string;
   @ApiProperty({ nullable: true }) updated_at: string | null;
   @ApiProperty({ nullable: true }) obs: string | null;
+  @ApiProperty({ nullable: true }) idclient: number | null;
+  @ApiProperty({ nullable: true }) identerprise: number | null;
+  @ApiProperty({ nullable: true }) nameenterprise: string | null;
 }
